--- a/package.json
+++ b/package.json
@@ -94,11 +94,13 @@
     "compose-middleware": "^2.2.0",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
+    "laravel-echo": "^1.3.2",
     "material-ui": "^1.0.0-beta.17",
     "material-ui-icons": "^1.0.0-beta.17",
     "microseconds": "^0.1.0",
     "morgan": "^1.8.2",
     "normalize.css": "^7.0.0",
+    "pusher-js": "^4.2.1",
     "react": "^15.5.4",
     "react-broadcast": "^0.3.1",
     "react-dom": "^15.5.4",
