--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-router-dom": "^4.1.1",
     "recompose": "^0.23.1",
     "redux": "^3.6.0",
+    "request": "^2.83.0",
     "tslib": "^1.6.0",
     "typeface-roboto": "0.0.41"
   },
