--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
+    "body-parser": "^1.18.2",
     "compose-middleware": "^2.2.0",
     "express": "^4.15.3",
     "isomorphic-fetch": "^2.2.1",
